--- a/backend/templates/docs.html
+++ b/backend/templates/docs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>School Service Documentation</title>
+    <title>Doctorinna API schema</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css"
